# hal-exceptions-test

./: README.md  shell.nix
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
nix/: sources.json
runtime/: Main.hs  default.nix  result  runtime.cabal
