cabal-version:       2.0
name:                runtime
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jack Kelly
maintainer:          jack.kelly@bellroy.com
copyright:           Copyright (C) 2021 Bellroy Pty Ltd
build-type:          Simple

executable runtime
  main-is:             Main.hs
  build-depends:       base ^>=4.14
                     , aeson ^>= 1.5.6.0
                     , hal ^>= 0.4.8
                     , text ^>= 1.2.4.1
  default-language:    Haskell2010
